--- a/styles/style.css
+++ b/styles/style.css
@@ -44,20 +44,22 @@ h4 {
   margin: 0;
   margin-top: 29px;
 }
-blockquote {
+blockquote, blockquote p {
   font-family: "medium-content-slab-serif-font",Georgia,Cambria,"Times New Roman",Times,serif;
   font-weight: 400;
   font-size: 2.8rem;
   margin: 0;
   padding: 0;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  padding-left: 50px;
   line-height: 1.48;
   letter-spacing: -0.014rem;
   font-style: italic;
   margin-left: -1.75px;
   color: rgba(0, 0, 0, .6);
+}
+blockquote {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  padding-left: 50px;
 }
 a {
   color: #2ecc71;
