add styles for ul ol li

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,55 @@ body {
 p {
   font-size: 2.1rem;
   margin-top: 0px;
-  margin-bottom: 29;
+  margin-bottom: 29px;
+}
+ol, ul {
+  padding: 0;
+  list-style: none;
+  list-style-image: none;
+}
+ol {
+  counter-reset: post;
+}
+ul {
+
+}
+li {
+  font-family: "medium-content-serif-font",Georgia,Cambria,"Times New Roman",Times,serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2.1rem;
+  line-height: 1.58;
+  letter-spacing: -0.003em;
+  margin-top: 0px;
+  margin-left: 30px;
+  margin-bottom: 14px;
+}
+#container ol>li::before {
+  position: absolute;
+  display: inline-block;
+  box-sizing: border-box;
+  width: 58px;
+  margin-left: -58px;
+  text-align: right;
+  font-feature-settings: "liga" on,"lnum" on;
+  -moz-font-feature-settings: "liga" on,"lnum" on;
+  -webkit-font-feature-settings: "liga" on,"lnum" on;
+  padding-right: 12px;
+  counter-increment: post;
+  content: counter(post) ".";
+}
+#container ul>li::before {
+  position: absolute;
+  display: inline-block;
+  box-sizing: border-box;
+  width: 58px;
+  margin-left: -58px;
+  font-size: 1.68rem;
+  padding-top: 4px;
+  padding-right: 15px;
+  content: '•';
+  text-align: right;
 }
 h3 {
   font-family: "medium-content-sans-serif-font","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
