--- a/styles/style.css
+++ b/styles/style.css
@@ -112,6 +112,12 @@ blockquote {
   margin-bottom: 30px;
   padding-left: 50px;
 }
+pre {
+  font-size: 1.6rem;
+  line-height: 1.3;
+  word-wrap: normal;
+  word-break: normal;
+}
 #editContainer pre,
 #addContainer pre {
   position: relative;
